archived-versions/v1.3/modules/en/pages/integrations/terraform/terraform-provider.adoc
= Terraform Provider
:revdate: 2025-04-25
:page-revdate: {revdate}

== Support Matrix

|===
| Harvester Version | Supported Terraform Provider Harvester | Supported Terraformer Harvester

| https://github.com/harvester/harvester/releases/tag/v1.3.2[v1.3.2]
| https://github.com/harvester/terraform-provider-harvester/releases/tag/v0.6.4[v0.6.4]
| https://github.com/harvester/terraformer/releases/tag/v1.1.1-harvester[v1.1.1-harvester]

| https://github.com/harvester/harvester/releases/tag/v1.3.1[v1.3.1]
| https://github.com/harvester/terraform-provider-harvester/releases/tag/v0.6.4[v0.6.4]
| https://github.com/harvester/terraformer/releases/tag/v1.1.1-harvester[v1.1.1-harvester]

| https://github.com/harvester/harvester/releases/tag/v1.3.0[v1.3.0]
| https://github.com/harvester/terraform-provider-harvester/releases/tag/v0.6.4[v0.6.4]
| https://github.com/harvester/terraformer/releases/tag/v1.1.1-harvester[v1.1.1-harvester]

| https://github.com/harvester/harvester/releases/tag/v1.2.2[v1.2.2]
| https://github.com/harvester/terraform-provider-harvester/releases/tag/v0.6.4[v0.6.4]
| https://github.com/harvester/terraformer/releases/tag/v1.1.1-harvester[v1.1.1-harvester]

| https://github.com/harvester/harvester/releases/tag/v1.2.1[v1.2.1]
| https://github.com/harvester/terraform-provider-harvester/releases/tag/v0.6.4[v0.6.4]
| https://github.com/harvester/terraformer/releases/tag/v1.1.1-harvester[v1.1.1-harvester]

| https://github.com/harvester/harvester/releases/tag/v1.2.0[v1.2.0]
| https://github.com/harvester/terraform-provider-harvester/releases/tag/v0.6.3[v0.6.3]
| https://github.com/harvester/terraformer/releases/tag/v1.1.1-harvester[v1.1.1-harvester]

| https://github.com/harvester/harvester/releases/tag/v1.1.2[v1.1.2]
| https://github.com/harvester/terraform-provider-harvester/releases/tag/v0.6.3[v0.6.3]
| https://github.com/harvester/terraformer/releases/tag/v1.1.1-harvester[v1.1.1-harvester]

| https://github.com/harvester/harvester/releases/tag/v1.1.1[v1.1.1]
| https://github.com/harvester/terraform-provider-harvester/releases/tag/v0.6.3[v0.6.3]
| https://github.com/harvester/terraformer/releases/tag/v1.1.1-harvester[v1.1.1-harvester]

| https://github.com/harvester/harvester/releases/tag/v1.1.0[v1.1.0]
| https://github.com/harvester/terraform-provider-harvester/releases/tag/v0.6.3[v0.6.3]
| https://github.com/harvester/terraformer/releases/tag/v1.1.1-harvester[v1.1.1-harvester]
|===

== Requirements

* https://www.terraform.io/downloads.html[Terraform] >= 0.13.x
* https://go.dev/doc/install[Go] 1.18 to build the provider plugin

== Install The Provider

copy and paste this code into your Terraform configuration. Then, run `terraform init` to initialize it.

[,hcl]
----
terraform {
  required_providers {
    harvester = {
      source = "harvester/harvester"
      version = "<replace to the latest release version>"
    }
  }
}

provider "harvester" {
  # Configuration options
}
----

== Using the provider

More details about the provider-specific configurations can be found in the https://registry.terraform.io/providers/harvester/harvester/latest/docs[docs].

Github Repo: https://github.com/harvester/terraform-provider-harvester
